--- a/css/styles.css
+++ b/css/styles.css
@@ -349,6 +349,9 @@ img {
   font-weight: 700;
   color: var(--primary);
   text-align: right;
+  position: absolute;
+  bottom: 0;
+  right: 5%;
 }
 
 /* --- footer --- */
